--- a/src/components/ViewDao/ViewDao.scss
+++ b/src/components/ViewDao/ViewDao.scss
@@ -57,8 +57,9 @@ button:hover {
   }
 
   .title {
-    width: 255px;
+    width: 250px;
     padding: 0 15px;
+    flex-grow: 1;
   }
 
   .closeReason {
@@ -68,6 +69,7 @@ button:hover {
 
   .myActions {
     text-align: left;
+    width: 130px;
   }
 }
 
